[gd_scene load_steps=3 format=3 uid="uid://kfhwn4lpml61"]

[ext_resource type="Script" uid="uid://v412lfmukh41" path="res://UI/MainMenu.gd" id="1_uahxu"]
[ext_resource type="Texture2D" uid="uid://cw3yv54k8bvgr" path="res://Assets/MenuAssets/retro-background-gjqkb94ajz14w26m.jpg" id="2_b37jj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uahxu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -14.0
offset_top = -16.0
offset_right = 1167.0
offset_bottom = 665.0
texture = ExtResource("2_b37jj")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 488.0
offset_right = 664.0
offset_bottom = 444.0
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
